# fizzle

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
fizzle/: .gitignore  Cargo.toml  Fizzle-Example.toml  Fizzle.toml  build.rs
fizzle-common/: Cargo.toml
fizzle-common/src/: io.rs  lib.rs  path.rs  storage.rs
fizzle-plugin/: Cargo.toml
fizzle-plugin-aflnet-dns/: Cargo.toml
fizzle-plugin-aflnet-dns-better/: Cargo.toml
fizzle-plugin-aflnet-dns-better/src/: lib.rs
fizzle-plugin-aflnet-dns/src/: lib.rs
fizzle-plugin-aflnet-dtls/: Cargo.toml
fizzle-plugin-aflnet-dtls/src/: lib.rs
fizzle-plugin-aflnet-generic/: Cargo.toml
fizzle-plugin-aflnet-generic/src/: lib.rs
fizzle-plugin-aflnet-sip/: Cargo.toml
fizzle-plugin-aflnet-sip/src/: lib.rs
fizzle-plugin-butterfly-generic/: Cargo.toml
fizzle-plugin-butterfly-generic/src/: lib.rs
fizzle-plugin-file-stream/: Cargo.toml
fizzle-plugin-file-stream/src/: lib.rs
fizzle-plugin-fuzz-s1ap/: Cargo.toml
fizzle-plugin-fuzz-s1ap/src/: lib.rs  s1ap.rs
fizzle-plugin-libafl-datagram/: Cargo.toml
fizzle-plugin-libafl-datagram/src/: lib.rs
fizzle-plugin-libafl-generic/: Cargo.toml
fizzle-plugin-libafl-generic/src/: lib.rs
fizzle-plugin-libafl-stream/: Cargo.toml
fizzle-plugin-libafl-stream/src/: lib.rs
fizzle-plugin-ngap-server/: Cargo.toml
fizzle-plugin-ngap-server/src/: lib.rs
fizzle-plugin-spf-pbt/: Cargo.toml
fizzle-plugin-spf-pbt/src/: lib.rs
fizzle-plugin/src/: lib.rs
fizzle/src/: arena.rs  backend.rs  cell.rs  constants.rs  errno.rs  external.rs  handlers.rs  hook_macros.rs  hooks.rs  lib.rs  libc_ext.rs  once.rs  plugins.rs  scheduler.rs  semaphore.rs  state.rs  streams.rs  task.rs  util.rs
fizzle/src/handlers/: barrier.rs  buffer.rs  condvar.rs  descriptor.rs  directory.rs  entropy.rs  env.rs  epoll.rs  eventfd.rs  file.rs  filestream.rs  futex.rs  fuzz_endpoint.rs  id.rs  inotify.rs  message_queue.rs  mq.rs  mutex.rs  netdb.rs  pipe.rs  plugin.rs  plugin_module.rs  polled.rs  poller.rs  process.rs  resolv.rs  rwlock.rs  semaphore.rs  signal.rs  sleep.rs  socket.rs  spinlock.rs  thread.rs  time.rs
fizzle/src/hook_macros/: dyld_insert_libraries.rs  ld_preload.rs
fizzle/src/hooks/: aio.rs  dir.rs  entropy.rs  env.rs  event.rs  eventfd.rs  fanotify.rs  fd.rs  file.rs  filestream.rs  filesystem.rs  inotify.rs  io.rs  io_uring.rs  mem.rs  mq.rs  netdb.rs  other.rs  pipe.rs  poll.rs  posix_mq.rs  printf.rs  proc.rs  process.rs  protocols.rs  pthread.rs  resolv.rs  scanf.rs  semaphore.rs  signal.rs  sleep.rs  socket.rs  stat.rs  syscall.rs  syslog.rs  sysv_mq.rs  time.rs  uid.rs  vm.rs  xattr.rs
fizzle/src/hooks/protocols/: unix.rs
fizzle/src/state/: backend.rs  comptime.rs  fd.rs  identifiers.rs  ipc.rs  plugins.rs  singleton.rs
fizzle/test/: fflush.c  file_stream_e2e.sh  file_stream_server.c
