[workspace]
members = [
    "fizzle",
    "fizzle-common",
    "fizzle-plugin",
    "fizzle-plugin-aflnet-generic",
    "fizzle-plugin-aflnet-dns",
    "fizzle-plugin-aflnet-dns-better",
    "fizzle-plugin-aflnet-sip",
    "fizzle-plugin-aflnet-dtls",
    "fizzle-plugin-butterfly-generic",
    "fizzle-plugin-fuzz-s1ap",
    "fizzle-plugin-spf-pbt", "fizzle-plugin-libafl-stream", "fizzle-plugin-libafl-datagram",
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
