[package]
name = "fizzle-plugin-spf-pbt"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"

fizzle-plugin = { version = "0.1", path = "../fizzle-plugin" }

entropic = { version = "0.1.1" }
hickory-proto = { version = "0.25.1", git = "https://github.com/nathaniel-bennett/hickory-dns" }
log = { version = "0.4" } # For trace logs
rand = { version = "0.8", features = ["small_rng"] } # For per-round RNG