[package]
name = "fizzle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["passthroughfs", "pcr"]
# Adds code needed to run AFL++ with deferred forkserver mode
afl = []
# Adds code needed to run AFL++ Persistent mode with Channel Reset (PCR)
# NOTE: requires `AFL_PERSISTENT=1` to work
pcr = ["afl"]
passthroughfs = []

[build-dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0" }
toml = "0.8"

[dependencies]
bitflags = "2.6.0"
env_logger = "0.11"
fizzle-common = { version = "0.1", path = "../fizzle-common" }
fizzle-plugin = { version = "0.1", path = "../fizzle-plugin" }
fxhash = "0.2"
heapless = "0.8"
libc = "0.2"
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
toml = "0.8"

embedded-alloc = { version = "0.6.0", features = ["tlsf", "allocator_api"] }
# TODO: implement custom critical-section with no Mutex to speed up shim? (since no concurrency is guaranteed)
critical-section = { version = "1.1", features = [] }

# Start of Fizzle Plugin Dependencies
fizzle-plugin-fuzz-s1ap = {version = "0.1", path = "../fizzle-plugin-fuzz-s1ap"}



# Examples:
# 
# fizzle-http = "0.1"
# fizzle-yaml = "0.2.0"
# fizzle-zmq-client = "0.4.2"
# fizzle-http-customheaders = { version = "0.1", path = "../../fizzle-http-customheaders" }
#


# End of Fizzle Plugin Dependencies
