[package]
name = "fizzle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["passthroughfs", "afl"]
# Adds code needed to run AFL++ with deferred forkserver mode
afl = []
# Adds code needed to run AFL++ Persistent mode with Channel Reset (PCR)
# NOTE: requires `AFL_PERSISTENT=1` to work
pcr = ["afl"]
passthroughfs = []
quikcov = []

[build-dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0" }
toml = "0.8" # For reading Fizzle.toml

[dependencies]
bitflags = "2.6.0"
critical-section = { version = "1.1", features = [] } # We implement our own lock-free crit section to improve perf
embedded-alloc = { version = "0.6.0", features = ["tlsf", "allocator_api"] } # For interprocess allocation
env_logger = "0.11" # For trace logs
hashbrown = { version = "0.15", features = ["nightly"] } # For allocatior API
libc = "0.2" # For various low-level operations
log = { version = "0.4" } # For trace logs
rand = { version = "0.8", features = ["small_rng"] } # For per-round RNG

hickory-proto = { version = "0.25.1", git = "https://github.com/nathaniel-bennett/hickory-dns" }
entropic = { version = "0.1.1" }

fizzle-common = { version = "0.1", path = "../fizzle-common" }
fizzle-plugin = { version = "0.1", path = "../fizzle-plugin" }
fizzle-plugin-aflnet-dns = {version = "0.1", path = "../fizzle-plugin-aflnet-dns"}
fizzle-plugin-aflnet-dns-better = {version = "0.1", path = "../fizzle-plugin-aflnet-dns-better"}
fizzle-plugin-aflnet-dtls = {version = "0.1", path = "../fizzle-plugin-aflnet-dtls"}
fizzle-plugin-aflnet-generic = {version = "0.1", path = "../fizzle-plugin-aflnet-generic"}
fizzle-plugin-aflnet-sip = {version = "0.1", path = "../fizzle-plugin-aflnet-sip"}
fizzle-plugin-fuzz-s1ap = {version = "0.1", path = "../fizzle-plugin-fuzz-s1ap"}
fizzle-plugin-spf-pbt = {version = "0.1", path = "../fizzle-plugin-spf-pbt"}

# Examples:
# 
# fizzle-http = "0.1"
# fizzle-yaml = "0.2.0"
# fizzle-zmq-client = "0.4.2"
# fizzle-http-customheaders = { version = "0.1", path = "../../fizzle-http-customheaders" }
#


# End of Fizzle Plugin Dependencies
