[package]
name = "fizzle"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["passthroughfs"]
# Adds code needed to run AFL++ with deferred forkserver mode
afl = []
# Adds code needed to run AFL++ Persistent mode with Channel Reset (PCR)
# NOTE: requires `AFL_PERSISTENT=1` to work
pcr = ["afl"]
passthroughfs = []
quikcov = []
sigsan = []
sigsan_posix = ["sigsan"]

[build-dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0" }
toml = "0.8" # For reading Fizzle.toml

[dependencies]
bitflags = "2.6.0"
# Use: lock-free application of interprocess heap for improved performance
critical-section = { version = "1.1", features = [] }
# Use: interprocess heap allocation primitive
embedded-alloc = { version = "0.7.0", features = ["tlsf", "allocator_api"], git = "https://github.com/rust-embedded/embedded-alloc" }
# Use: emitting logs to stdout
env_logger = "0.11"
# Use: Allocator API for `HashMap`/`HashSet` types; faster hashing algs
hashbrown = { version = "0.16.1", features = ["nightly"] }
# Use: calling underlying implementations of standard library functions
libc = "0.2" # For various low-level operations
# Use: logging for debugging purposes
log = { version = "0.4" } # For trace logs
# Use: RNG for shadowing rand() APIs
rand_chacha = "0.9.0"

# Use: libresolv mocking (TODO: pull out into `fizzle-plugin-resolv` plugin)
hickory-proto = { version = "0.25.1", git = "https://github.com/nathaniel-bennett/hickory-dns" }
# Use: libresolv mocking (TODO: pull out
entropic = { version = "0.1.1" }

# Plugin dependencies 
fizzle-common = { version = "0.1", path = "../fizzle-common" }
fizzle-plugin = { version = "0.1", path = "../fizzle-plugin" }
fizzle-plugin-libafl-datagram = { version = "0.1", path = "../fizzle-plugin-libafl-datagram" }
fizzle-plugin-libafl-stream = { version = "0.1", path = "../fizzle-plugin-libafl-stream" }
fizzle-plugin-aflnet-dns = {version = "0.1", path = "../fizzle-plugin-aflnet-dns"}
fizzle-plugin-aflnet-dns-better = {version = "0.1", path = "../fizzle-plugin-aflnet-dns-better"}
fizzle-plugin-aflnet-dtls = {version = "0.1", path = "../fizzle-plugin-aflnet-dtls"}
fizzle-plugin-aflnet-generic = {version = "0.1", path = "../fizzle-plugin-aflnet-generic"}
fizzle-plugin-aflnet-sip = {version = "0.1", path = "../fizzle-plugin-aflnet-sip"}
fizzle-plugin-fuzz-s1ap = {version = "0.1", path = "../fizzle-plugin-fuzz-s1ap"}
fizzle-plugin-spf-pbt = {version = "0.1", path = "../fizzle-plugin-spf-pbt"}
